add projects and user info to homepage with appropriate css

--- a/index.html
+++ b/index.html
@@ -1,14 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/loader.css">
+    <link rel="stylesheet" href="css/grid-layout.css">
+    <link rel="stylesheet" href="css/line-graph.css">
+    <link rel="stylesheet" href="css/projects.css">
+    <link rel="stylesheet" href="css/skills.css">
+    <link rel="stylesheet" href="css/other.css">
     <title>GraphQL</title>
 </head>
+
 <body>
-    
+    <!-- <div class="homepage-container">
+        <div class="item header">
+            <h1 class="header-title">Jasonasante GraphQL</h1>
+        </div>
+        <div class="projects-container">
+            <h1 class="project-title">Completed Projects</h1>
+            <div class="project-names">
+            Project Names and make 
+            each name have a hover function that creates 
+            a min pop with all the project info
+            On click send to repo
+            </div>
+
+        </div>
+        <div class="line-graphs">
+            <h1 class="line-graph-title">Progression</h1>
+            <select name="graph-display-name" class="graph-display-name">
+                <option value="Level">Level</option>
+                <option value="Go Projects">Go Projects</option>
+                <option value="Javascript">Javascript</option>
+            </select>
+            <div class="svg-line-graphs"></div>
+            Line Chart and Options div so we can choose between go projects, piscinejs,js projects and levels</div>
+        <div class="skills-container">
+            <h1 class="skills-title">Skills</h1>
+            <div class="svg-pie-chart"></div>
+        </div>
+        <div class="other-container">
+            <h1 class="other-title">User Info</h1>
+            Other info such as current level, current project,
+            max/min xp project, max/min grade project
+        </div>
+        <div class="item footer">Add message</div>
+      </div> -->
 </body>
-<script type="module" src="./js/test.js"></script>
-<!-- <script type="module" src="./js/display.js"></script> -->
+<script type="module" src="./js/graphql.js"></script>
+
 </html>
