--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     <link rel="stylesheet" href="css/projects.css">
     <link rel="stylesheet" href="css/skills.css">
     <link rel="stylesheet" href="css/other.css">
+    <link rel="stylesheet" href="css/signIn.css">
+    <link href="https://cdn.jsdelivr.net/npm/gotham-fonts@1.0.3/css/gotham-rounded.min.css" rel="stylesheet">
     <title>GraphQL</title>
 </head>
+
 <body>
 </body>
 <script type="module" src="./js/graphql.js"></script>
